--- a/WebApp/Areas/Admin/Views/DailyList/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/DailyList/Index.cshtml
@@ -8,6 +8,25 @@
     Danh sách bảng kê
 }
 
+@section JsFooter{
+    <script>
+        $("#txtsearch").on("keyup", function () {
+            var txtenter = $(this).val();
+            $("table tr").each(function (results) {
+                if (results!==0) {
+                    var id = $(this).find("td:nth-child(3)").text();//Vị trí của <td>từ 1 đếm xuống tương ứng với mã KTV
+                    if (id.indexOf(txtenter) !== 0 && id.toLowerCase().indexOf(txtenter.toLowerCase()) < 0)
+                    {
+                        $(this).hide();
+                    }
+                    else {
+                        $(this).show();
+                    }
+                }
+            })
+        });
+    </script>
+    }
 <div class="row">
 
     <div class="col-lg-12">
@@ -21,19 +40,23 @@
             <div class="panel-body">
                 @using (Html.BeginForm("Index", "DailyList", FormMethod.Get))
                 {
+
                     <div class="row form-group">
                         <div class="col-lg-12">
-                            <div class="col-md-4">
+                            <input type="text" id="txtsearch" placeholder="Nhập vào mã KTV" />
+
+                            @*<div class="col-md-4">
+
                                 <input type="text" value="@ViewBag.SearchString" class="form-control" name="searchString" />
                             </div>
                             <div class="col-md-4">
                                 <button type="submit" class="btn btn-success">Tìm kiếm</button>
                                 <a class="btn btn-primary" href="/Admin/DailyList/Create">Thêm mới</a>
-                            </div>
+                            </div>*@
                         </div>
                     </div>
                 }
-
+                <hr />
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
@@ -58,47 +81,47 @@
                         <tbody>
                             @foreach (var item in Model)
                             {
-                            <tr id="row_@item.ID">
+                                <tr id="row_@item.ID">
 
-                                <th>@item.Employee.Department.Name</th>
-                                <th>#@item.ID</th>
-                                <td>@item.Employee.Code</td>
-                                <td>@item.Room</td>
-                                <td>@item.TimeIn</td>
-                                <td>@item.TimeOut</td>
-                                <td>@(string.Format("{0:#,##0}", item.Ticket.Price))</td>
-                                <td>@(string.Format("{0:#,##0}", item.Tip))</td>
-                                <td>@(string.Format("{0:#,##0}", item.Code))</td>
-                                <td>@(string.Format("{0:#,##0}", item.Discount))</td>
+                                    <th>@item.Employee.Department.Name</th>
+                                    <th>#@item.ID</th>
+                                    <td>@item.Employee.Code</td>
+                                    <td>@item.Room</td>
+                                    <td>@item.TimeIn</td>
+                                    <td>@item.TimeOut</td>
+                                    <td>@(string.Format("{0:#,##0}", item.Ticket.Price))</td>
+                                    <td>@(string.Format("{0:#,##0}", item.Tip))</td>
+                                    <td>@(string.Format("{0:#,##0}", item.Code))</td>
+                                    <td>@(string.Format("{0:#,##0}", item.Discount))</td>
 
-                                @{
-                                    if (item.Taxi_ID != null)
-                                    {
-                                        @*<td>@item.Taxi.Commission</td>*@
-                                        <td>@(string.Format("{0:#,##0}", item.Taxi.Price))</td>
-                                        <td>@(string.Format("{0:#,##0}", item.Ticket.Price + item.Tip - item.Code - item.Discount - item.Taxi.Price))</td>
+                                    @{
+                                        if (item.Taxi_ID != null)
+                                        {
+                                            @*<td>@item.Taxi.Commission</td>*@
+                                            <td>@(string.Format("{0:#,##0}", item.Taxi.Price))</td>
+                                            <td>@(string.Format("{0:#,##0}", item.Ticket.Price + item.Tip - item.Code - item.Discount - item.Taxi.Price))</td>
+                                        }
+                                        else
+                                        {
+                                            <td></td>
+                                            <td>@(string.Format("{0:#,##0}", item.Ticket.Price + item.Tip-item.Code-item.Discount))</td>
+                                        }
                                     }
-                                    else
-                                    {
-                                        <td></td>
-                                        <td>@(string.Format("{0:#,##0}", item.Ticket.Price + item.Tip-item.Code-item.Discount))</td>
-                                    }
-                                }
 
-                                <td>@item.Request</td>
-                                <td>@Html.Raw(item.Status ? "<strong style=\"color:Green;\">Đã xác nhận</strong>" : "<strong style=\"color:Tomato;\">Đang chờ</strong>")</td>
-                                <td>@item.Description</td>
-                                <td>
-                                    <a href="/Admin/DailyList/Edit/@item.ID">Sửa</a>
-                                    |
-                                    @Ajax.ActionLink("Xoá", "Delete", new { @id = item.ID }, new AjaxOptions
-                               {
-                                   Confirm = "Bạn có muốn xoá bản ghi này?",
-                                   OnComplete = "$('#row_" + @item.ID + "').remove()",
-                                   HttpMethod = "Delete"
-                               })
-                                </td>
-                            </tr>
+                                    <td>@item.Request</td>
+                                    <td>@Html.Raw(item.Status ? "<strong style=\"color:Green;\">Đã xác nhận</strong>" : "<strong style=\"color:Tomato;\">Đang chờ</strong>")</td>
+                                    <td>@item.Description</td>
+                                    <td>
+                                        <a href="/Admin/DailyList/Edit/@item.ID">Sửa</a>
+                                        |
+                                        @Ajax.ActionLink("Xoá", "Delete", new { @id = item.ID }, new AjaxOptions
+                                   {
+                                       Confirm = "Bạn có muốn xoá bản ghi này?",
+                                       OnComplete = "$('#row_" + @item.ID + "').remove()",
+                                       HttpMethod = "Delete"
+                                   })
+                                    </td>
+                                </tr>
                             }
 
 
