--- a/WebApp/Areas/Admin/Views/Employee/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Employee/Index.cshtml
@@ -7,6 +7,26 @@
 @section header{
     Danh sách người dùng
 }
+@section JsFooter{
+    <script>
+        $("#txtsearch").on("keyup", function () {
+            var txtenter = $(this).val();
+            $("table tr").each(function (results) {
+                if (results!==0) {
+                    var id = $(this).find("td:nth-child(3)").text();//Vị trí của <td>từ 1 đếm xuống
+                    if (id.indexOf(txtenter) !== 0 && id.toLowerCase().indexOf(txtenter.toLowerCase()) < 0)
+                    {
+                        $(this).hide();
+                    }
+                    else {
+                        $(this).show();
+                    }
+                }
+            })
+        });
+    </script>
+}
+
 <div class="row">
 
     <div class="col-lg-12">
@@ -15,7 +35,6 @@
             <div class="panel-heading">
                 Danh sách người dùng
             </div>
-
             <!-- /.panel-heading -->
             <div class="panel-body">
                 @using (Html.BeginForm("Index", "Employee", FormMethod.Get))
@@ -23,16 +42,16 @@
                     <div class="row form-group">
                         <div class="col-lg-12">
                             <div class="col-md-4">
-                                <input type="text" value="@ViewBag.SearchString" class="form-control" name="searchString" />
+                                <input type="text" id="txtsearch" placeholder="Nhập vào Tên NV" class="form-control" />
+                                @*<input type="text" id="txtsearch" value="@ViewBag.SearchString" class="form-control" name="searchString" />*@
                             </div>
                             <div class="col-md-4">
-                                <button type="submit" class="btn btn-success">Tìm kiếm</button>
+                                @*<button type="submit" class="btn btn-success">Tìm kiếm</button>*@
                                 <a class="btn btn-primary" href="/Admin/Employee/Create">Thêm mới</a>
                             </div>
                         </div>
                     </div>
                 }
-
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
@@ -53,30 +72,30 @@
                         <tbody>
                             @foreach (var item in Model)
                             {
-                            <tr id="row_@item.ID">
-                                <td>@item.Code</td>
-                                <td>@item.Department.Name</td>
-                                <td>@item.Name</td>
-                                <td>@item.Username</td>
-                                <td><img src="@item.Image" width="100px" /></td>
-                                <td>@item.Phone</td>
-                                <td>@item.Birthday</td>
-                                <td>@item.TimeStart</td>
-                                <td>@item.TimeOut</td>
-                                <td>@item.DayOffs.Where(c => c.Employee_ID == item.ID).ToList().Count()</td>
-                                @*<td>@item.NumberOfDayOff</td>*@
-                                <td><a href="#" class="btn-active" data-id="@item.ID">@Html.Raw(item.StatusAccount ? "<strong>Kích hoạt</strong>" : "Khoá")</a></td>
-                                <td>
-                                    <a href="/Admin/Employee/Edit/@item.ID">Sửa</a>
-                                    |
-                                    @Ajax.ActionLink("Xoá", "Delete", new { @id = item.ID }, new AjaxOptions
-                               {
-                                   Confirm = "Bạn có muốn xoá bản ghi này?",
-                                   OnComplete = "$('#row_" + @item.ID + "').remove()",
-                                   HttpMethod = "Delete"
-                               })
-                                </td>
-                            </tr>
+                                <tr id="row_@item.ID">
+                                    <td>@item.Code</td>
+                                    <td>@item.Department.Name</td>
+                                    <td>@item.Name</td>
+                                    <td>@item.Username</td>
+                                    <td><img src="@item.Image" width="100px" /></td>
+                                    <td>@item.Phone</td>
+                                    <td>@item.Birthday</td>
+                                    <td>@item.TimeStart</td>
+                                    <td>@item.TimeOut</td>
+                                    <td>@item.DayOffs.Where(c => c.Employee_ID == item.ID).ToList().Count()</td>
+                                    @*<td>@item.NumberOfDayOff</td>*@
+                                    <td><a href="#" class="btn-active" data-id="@item.ID">@Html.Raw(item.StatusAccount ? "<strong>Kích hoạt</strong>" : "Khoá")</a></td>
+                                    <td>
+                                        <a href="/Admin/Employee/Edit/@item.ID">Sửa</a>
+                                        |
+                                        @Ajax.ActionLink("Xoá", "Delete", new { @id = item.ID }, new AjaxOptions
+                                   {
+                                       Confirm = "Bạn có muốn xoá bản ghi này?",
+                                       OnComplete = "$('#row_" + @item.ID + "').remove()",
+                                       HttpMethod = "Delete"
+                                   })
+                                    </td>
+                                </tr>
                             }
 
 
