--- a/WebApp/Areas/Admin/Views/Shared/_Layouts.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/_Layouts.cshtml
@@ -9,7 +9,7 @@
     <title>MassageVua</title>
     <!-- Bootstrap Core CSS -->
     <link href="/assets/admin/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/assets/client/css/font-awesome.min.css" rel="stylesheet" />
+    @*<link href="/assets/client/css/font-awesome.min.css" rel="stylesheet" />*@
     <!-- MetisMenu CSS -->
     <link href="/assets/admin/bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -62,7 +62,7 @@
     <!-- Metis Menu Plugin JavaScript -->
     <script src="/assets/admin/bower_components/metisMenu/dist/metisMenu.min.js"></script>
     <script src="/assets/admin/js/plugins/ckfinder/ckfinder.js"></script>
-    <script src="/assets/admin/js/plugins/ckeditor/ckeditor.js"></script>
+    @*<script src="/assets/admin/js/plugins/ckeditor/ckeditor.js"></script>*@
     <!-- Custom Theme JavaScript -->
     <script src="/assets/admin/dist/js/sb-admin-2.js"></script>
     @RenderSection("jsFooter", required: false)
